<resources>
    <string name="app_name" translatable="false">PositionAlert</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sound_select_menu_text">Select ringtone</string>

    <string name="radiusText">Radius(m): %d</string>
    <string name="latitudeText">Latitude: %f</string>
    <string name="longitudeText">Longitude: %f</string>
    <string name="destinationDeleteButton">Delete</string>
    <string name="activeSwitch">Active:</string>
    <string name="deleteOnReachSwitch">Delete on reach:</string>
    <string name="menu_map">Map</string>
    <string name="menu_destinations">Destinations</string>
    <string name="stop_alarm_message">Move the slider right to stop the alarm</string>
    <string name="destination_dialog_name">Name:</string>
    <string name="destination_dialog_name_hint">My first destination</string>
    <string name="destination_dialog_radius">Radius (m):</string>
    <string name="destination_dialog_radius_hint" translatable="false">500</string>
    <string name="destination_dialog_button_delete">Delete</string>
    <string name="destination_dialog_button_add">Add</string>
    <string name="active_mode">Active Mode</string>
    <string name="buttonLogin">Login</string>
    <string name="deleteOnReachToastActive">Destination will be deleted when reached</string>
    <string name="deleteOnReachToastInactive">Destination will be kept when reached</string>
</resources>
